# e_squared

./: .gitignore  README.md
backend/: BACKTESTING_API.md  Cargo.toml  DEX_INTEGRATION.md  README.md  debug_logs.txt
backend/.cargo/: config.toml
backend/migrations/: 001_initial.sql  002_add_strategy_type_to_backtest_results.sql  003_add_total_invested_to_backtest_results.sql  004_create_strategy_tables.sql  005_create_wallet_connections.sql
backend/src/: main.rs
backend/src/backtesting/: binance_fetcher.rs  data_cache.rs  engine.rs  mod.rs  stock_fetcher.rs  types.rs
backend/src/config/: mod.rs
backend/src/database/: mod.rs
backend/src/dex_connectors/: common_types.rs  errors.rs  factory.rs  jupiter.rs  mod.rs  pancakeswap.rs  raydium.rs  traits.rs  uniswap.rs
backend/src/exchange_connectors/: README.md  common_types.rs  endpoints.md  errors.rs  factory.rs  mod.rs  shared_types.rs  traits.rs  types.rs
backend/src/execution/: engine.rs  mod.rs  types.rs
backend/src/handlers/: auth.rs  backtest_management.rs  backtesting_handler.rs  dca_strategy_management.rs  exchange_connector_handler.rs  exchange_management.rs  exchange_optional.rs  grid_trading_strategy_management.rs  macd_strategy_management.rs  market_data.rs  mod.rs  rsi_strategy_management.rs  session_management.rs  sma_crossover_strategy_management.rs  stock_data.rs  strategy_summary.rs  strategy_templates_handler.rs  two_factor.rs  user_profile.rs  wallet_management.rs
backend/src/middleware/: auth.rs  mod.rs  session_tracking.rs
backend/src/models/: backtest_result.rs  dca_strategy.rs  exchange_connection.rs  grid_trading_strategy.rs  macd_strategy.rs  mod.rs  rsi_strategy.rs  sma_crossover_strategy.rs  user.rs  user_profile.rs  user_session.rs  wallet_balance.rs  wallet_connection.rs
backend/src/routes/: backtesting.rs  mod.rs
backend/src/services/: balance_update_service.rs  dca_execution_engine.rs  dxy_service.rs  market_data_service.rs  market_indicators_service.rs  mod.rs  stock_data_service.rs  strategy_templates.rs
backend/src/strategies/: mod.rs
(+142 files in other folders)
