[package]
name = "e_squared_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Actix Web framework and related
actix-web = "4.4"
actix-cors = "0.7"
actix-files = "0.6"
actix-session = { version = "0.10", features = ["cookie-session"] }
async-trait = "0.1"

# Database and ORM
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "json"] }
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid", "with-json"] }
sea-orm-migration = "0.12"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = { version = "0.3", features = ["std"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = { version = "1.38", features = ["serde-with-str"] }

# Authentication and security
jsonwebtoken = "9.2"
bcrypt = "0.15"
uuid = { version = "1.6", features = ["v4", "serde"] }
rand = "0.8"
sha2 = "0.10"
totp-rs = { version = "5.4", features = ["qr", "serde_support"] }
qrcode = "0.14"
base64 = "0.21"
aes-gcm = "0.10"
hex = "0.4"
hmac = "0.12"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenv = "0.15"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

# Performance and optimization
rayon = "1.8"
dashmap = "5.5"
once_cell = "1.19"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Binance SDK for official API integration
binance-sdk = { version = "1.0.0", features = ["derivatives_trading_usds_futures", "spot"] }

# IP geolocation
serde_with = "3.4"

# Configuration
config = "0.14"
futures-util = "0.3.31"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
